<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sensor NINJA</string>
    <string name="title_activity_preferencias">Sensor NINJA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <color name="black">#000000</color>
    <string name="config_button_on">Desligar</string>
    <string name="config_button_off">Ligar</string>
    <color name="white">#ffffff</color>
    <color name="grey">#666666</color>
    <string name="notification_inicio">Serviço NINJA foi iniciado.</string>
    <string name="config_label_location_refresh">Frequência:</string>
    <string name="config_label_twitter">Twitter:</string>
    <string name="config_freq_hint">*(hh:mm:ss)</string>
    <string name="config_label_url">URL</string>

</resources>
