<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityPreferencias" >

    <TextView
        android:id="@+id/label_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_label_location_refresh"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <NumberPicker
            android:id="@+id/npHH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <NumberPicker
            android:id="@+id/npMM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <NumberPicker
            android:id="@+id/npSS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/config_freq_hint"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/label_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/config_label_twitter"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/text_twitter"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />
    
    <TextView
        android:id="@+id/label_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_label_url"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <EditText
        android:id="@+id/text_url"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:inputType="textUri" />

    <ToggleButton
        android:id="@+id/toggleButton_service"
        android:layout_width="128dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginBottom="33dp"
        android:textOff="@string/config_button_off"
        android:textOn="@string/config_button_on" />

</LinearLayout>